<resources>
    <string name="app_name">Lab2</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_rock_paper_scissors">Welcome to Rock, Paper, Scissors!</string>
    <string name="please_choose_your_weapon">Please Choose Your Weapon:</string>
    <string name="rock">ROCK</string>
    <string name="paper">PAPER</string>
    <string name="scissors">SCISSORS</string>
    <string name="player_0_computer_0">Player: 0, Computer: 0</string>
    <string name="player_weapon">Player Weapon:</string>
    <string name="computer_weapon">Computer Weapon:</string>
    <string name="player_weapon_computerweapon">Player Weapon: ComputerWeapon:</string>
</resources>
