<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/welcomeMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_rock_paper_scissors"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/welcome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_choose_your_weapon"
            android:textSize="24sp" />

        <Button
            android:id="@+id/rockBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="rockClick"
            android:text="@string/rock"
            android:textSize="24sp" />

        <Button
            android:id="@+id/paperBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="paperClick"
            android:text="@string/paper"
            android:textSize="24sp" />

        <Button
            android:id="@+id/scissorsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="scissorClick"
            android:text="@string/scissors"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/winCountView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_0_computer_0"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/weaponView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_weapon_computerweapon"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/resultView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>